ObjectFactory will never return <null> so these checks are obsolete now.

--- a/libraries/libloader/source/org/pentaho/reporting/libraries/resourceloader/loader.properties
+++ b/libraries/libloader/source/org/pentaho/reporting/libraries/resourceloader/loader.properties
@@ -13,13 +13,13 @@ org.pentaho.reporting.libraries.resourceloader.loader.zip=org.pentaho.reporting.
 # The implementation and initialization is part of the module's reponsibility
 
 #
-# Using no real caching ..
+# Uncomment this (and comment the EHCache section) to disable caching ..
 #org.pentaho.reporting.libraries.resourceloader.cache.ResourceFactoryCacheProvider=org.pentaho.reporting.libraries.resourceloader.cache.NullCacheProvider
 #org.pentaho.reporting.libraries.resourceloader.cache.ResourceDataCacheProvider=org.pentaho.reporting.libraries.resourceloader.cache.NullCacheProvider
 #org.pentaho.reporting.libraries.resourceloader.cache.ResourceBundleDataCacheProvider=org.pentaho.reporting.libraries.resourceloader.cache.NullCacheProvider
 
 #
-# Using OSCache ... (if this is not available, it falls back to the 'NoCacheProvider'
+# Using EHCache ... (if this is not available, it falls back to the 'NoCacheProvider'
 org.pentaho.reporting.libraries.resourceloader.cache.ResourceFactoryCacheProvider=org.pentaho.reporting.libraries.resourceloader.modules.cache.ehcache.EHCacheProvider
 org.pentaho.reporting.libraries.resourceloader.cache.ResourceDataCacheProvider=org.pentaho.reporting.libraries.resourceloader.modules.cache.ehcache.EHCacheProvider
 org.pentaho.reporting.libraries.resourceloader.cache.ResourceBundleDataCacheProvider=org.pentaho.reporting.libraries.resourceloader.modules.cache.ehcache.EHCacheProvider
