Log tweak so that pentaho-database does not pollute the log

--- a/engine/core/test/simplelog.properties
+++ b/engine/core/test/simplelog.properties
@@ -40,3 +40,4 @@ org.apache.commons.logging.simplelog.log.org.pentaho.reporting.engine.classic.co
 org.apache.commons.logging.simplelog.log.org.pentaho.reporting.engine.classic.core.layout.process.PaginationStep=warn
 org.apache.commons.logging.simplelog.log.org.pentaho.reporting.engine.classic.core.layout.process.FlowPaginationStep=warn
 org.apache.commons.logging.simplelog.log.org.pentaho.reporting.engine.classic.core.layout.process.PaginationStepLib=warn
+org.apache.commons.logging.simplelog.log.org.pentaho.database.service.DatabaseDialectService=info
