--- a/libraries/libbase/devresource/simplelog.properties
+++ b/libraries/libbase/devresource/simplelog.properties
@@ -20,3 +20,4 @@ org.apache.commons.logging.simplelog.log.org.pentaho.reporting.engine.classic.co
 org.apache.commons.logging.simplelog.log.org.pentaho.reporting.engine.classic.core.states.datarow.DataProcessor=warn
 org.apache.commons.logging.simplelog.log.org.pentaho.reporting.engine.classic.core.layout.StreamingRenderer=debug
 org.apache.commons.logging.simplelog.log.org.pentaho.reporting.libraries.fonts.truetype.TrueTypeFontRegistry=info
+org.apache.commons.logging.simplelog.log.org.pentaho.database.service.DatabaseDialectService=info
