Merges and renaming class as the class name did not match the case-ness of the filename.

--- a/engine/core/build.properties
+++ b/engine/core/build.properties
@@ -11,6 +11,7 @@ tests.publish=true
 
 library.group=pentaho-library
 dependency.reporting-library.revision=TRUNK-SNAPSHOT
+dependency.pentaho-database-model.revision=TRUNK-SNAPSHOT
 ivy.default.sub-configs=internal,external
 
 junit.forkmode=once
