--- a/engine/core/ivy.xml
+++ b/engine/core/ivy.xml
@@ -46,7 +46,7 @@
         <exclude org="xml-apis" module="xml-apis"/>
       </dependency>
       <dependency org="commons-logging" name="commons-logging-api" rev="1.1" transitive="false" conf="default_external->default"/>
-      <dependency org="pentaho" name="pentaho-database-model" rev="TRUNK_SNAPSHOT" changing="true" conf="default_external->default"/>
+      <dependency org="pentaho" name="pentaho-database-model" rev="${dependency.pentaho-database-model.revision}" changing="true" conf="default_external->default"/>
 
 
       <dependency org="bsf" name="bsf" rev="2.4.0" transitive="false" conf="default_external->default"/>
