--- a/engine/extensions/ivy.xml
+++ b/engine/extensions/ivy.xml
@@ -28,9 +28,10 @@
     <!-- Barcode4j depends on avalon configuration classes, but does not document it in its maven file -->
     <dependency org="avalon-framework" name="avalon-framework" rev="4.1.5" transitive="false" conf="default_external->default"/>
 
-    <!--  external dependencies -->
-    <dependency org="commons-logging" name="commons-logging-api" rev="1.1" transitive="false"/>
+    <dependency org="commons-pool" name="commons-pool" rev="1.3" transitive="false" conf="default_external->default"/>
+    <dependency org="commons-dbcp" name="commons-dbcp" rev="1.2.1" transitive="false" conf="default_external->default"/>
     <dependency org="javax.mail" name="mail" rev="1.4.1" transitive="false" conf="default_external->default"/>
+
     <dependency org="junit" name="junit" rev="4.10" transitive="false" conf="test->default"/>
 	</dependencies>
 </ivy-module>
