--- a/engine/testcases/build.xml
+++ b/engine/testcases/build.xml
@@ -65,7 +65,7 @@
       Runs a typical continuous integration build including project dist,
       and test artifacts
       ====================================================================-->
-  <target name="continuous-local-junit" depends="build-testless,test,publish-local" />
+  <target name="continuous-local-junit" depends="build-testless,test" />
 
   <!--=======================================================================
       continuous-junit
@@ -73,7 +73,7 @@
       Runs a typical continuous integration build including project dist,
       and test artifacts
       ====================================================================-->
-  <target name="continuous-junit" depends="build,publish" />
+  <target name="continuous-junit" depends="build" />
 
   <!-- Until CM-466 is fixed, hot-patch it -->
   <target name="install-ivy" depends="subfloor.install-ivy">
