PRD-4554 - Fixing module definition for prd-connection-editor; fixing lost ivy-dependencies

--- a/designer/report-designer-assembly/ivy.xml
+++ b/designer/report-designer-assembly/ivy.xml
@@ -26,16 +26,17 @@
 		<dependency org="${reporting-engine.group}" name="pentaho-reporting-engine-datasource-editor-mondrian" rev="${dependency.reporting-engine.revision}" transitive="true" changing="true" />
 		<dependency org="${reporting-engine.group}" name="pentaho-reporting-engine-datasource-editor-olap4j" rev="${dependency.reporting-engine.revision}" transitive="true" changing="true" />
 		<dependency org="${reporting-engine.group}" name="pentaho-reporting-engine-datasource-editor-openerp" rev="${dependency.reporting-engine.revision}" transitive="true" changing="true" />
-        <dependency org="${reporting-engine.group}" name="pentaho-reporting-engine-datasource-editor-pmd" rev="${dependency.reporting-engine.revision}" transitive="true" changing="true" />
+    <dependency org="${reporting-engine.group}" name="pentaho-reporting-engine-datasource-editor-pmd" rev="${dependency.reporting-engine.revision}" transitive="true" changing="true" />
 		<dependency org="${reporting-engine.group}" name="pentaho-reporting-engine-datasource-editor-reflection" rev="${dependency.reporting-engine.revision}" transitive="true" changing="true" />
 		<dependency org="${reporting-engine.group}" name="pentaho-reporting-engine-datasource-editor-scriptable" rev="${dependency.reporting-engine.revision}" transitive="true" changing="true" />
 		<dependency org="${reporting-engine.group}" name="pentaho-reporting-engine-datasource-editor-xpath" rev="${dependency.reporting-engine.revision}" transitive="true" changing="true" />
 		<dependency org="${reporting-engine.group}" name="pentaho-reporting-engine-classic-extensions-sampledata" rev="${dependency.reporting-engine.revision}" transitive="true" changing="true" />
-        <dependency org="${reporting-engine.group}" name="pentaho-reporting-engine-legacy-functions" rev="${dependency.reporting-engine.revision}" transitive="true" changing="true" />
+    <dependency org="${reporting-engine.group}" name="pentaho-reporting-engine-legacy-functions" rev="${dependency.reporting-engine.revision}" transitive="true" changing="true" />
 		<dependency org="${ivy.artifact.group}"     name="report-designer-ext-legacy-charts" rev="${dependency.report-designer.revision}" transitive="true" changing="true" />
 		<dependency org="${ivy.artifact.group}"     name="report-designer-ext-pentaho" rev="${dependency.report-designer.revision}" transitive="true" changing="true" />
 		<dependency org="${ivy.artifact.group}"     name="report-designer-ext-wizard" rev="${dependency.report-designer.revision}" transitive="true" changing="true" />
-        <dependency org="${ivy.artifact.group}"     name="report-designer-ext-toc" rev="${dependency.report-designer.revision}" transitive="true" changing="true" />
+    <dependency org="${ivy.artifact.group}"     name="report-designer-ext-toc" rev="${dependency.report-designer.revision}" transitive="true" changing="true" />
+    <dependency org="${ivy.artifact.group}"     name="report-designer-ext-connection-editor" rev="${dependency.report-designer.revision}" transitive="true" changing="true" />
 
 		<!-- launcher -->
 		<dependency org="pentaho" name="pentaho-application-launcher" rev="${dependency.launcher.revision}" transitive="true" changing="true" conf="runtime->default" />
