--- a/designer/report-designer-extension-connectioneditor/build.properties
+++ b/designer/report-designer-extension-connectioneditor/build.properties
@@ -1,8 +1,8 @@
 project.revision=TRUNK-SNAPSHOT
 ivy.artifact.group=pentaho-report-designer
-ivy.artifact.id=report-designer-ext-toc
-impl.title=Pentaho Report Designer Table of Contents Plugin
-impl.productID=pentaho-report-designer-toc
+ivy.artifact.id=report-designer-ext-connection-editor
+impl.title=Pentaho Report Designer Connection-Editor
+impl.productID=pentaho-report-designer-ext-connection-editor
 javadoc.packagenames=org.pentaho.*
 
 src.dir=${basedir}/source
