--- a/engine/core/build.properties
+++ b/engine/core/build.properties
@@ -17,6 +17,7 @@ performance.reports.html.dir=${basedir}/bin/reports/performance/html
 
 library.group=pentaho-library
 dependency.reporting-library.revision=5.0-SNAPSHOT
+dependency.pentaho-database-model.revision=5.0-SNAPSHOT
 ivy.default.sub-configs=internal,external
 
 junit.forkmode=once
