--- a/designer/report-designer-extension-connectioneditor/build.properties
+++ b/designer/report-designer-extension-connectioneditor/build.properties
@@ -20,3 +20,5 @@ junit.sysprop.user.region=US
 junit.sysprop.user.timezone=UTC
 junit.sysprop.java.awt.headless=true
 junit.sysprop.file.encoding=UTF-8
+
+dependency.reporting-engine.revision=${project.revision}
